# calcul-cout-electricite

./: README.md  clean-enedis-data.ipynb  load-tarif.ipynb  pyproject.toml  requirements.txt
datalake/: enedis-data-ready-to-work.parquet  enedis_conso_clean.csv  sample.csv  tarif-bleu-base.ods  tarif-bleu-hp-hc.ods  tarif-vert-auto-hp-hc.ods  tarif-vert-auto-weekend-hc-hp.ods  tarif-vert-base.ods  tarif-vert-hp-hc.ods  tarif-vert-weekend-hc-hp.ods  tarif-vert-weekend.ods
