[tool.poetry]
name = "calcul-cout-electricite"
version = "0.1.0"
description = ""
authors = ["lepiaf <1940947+lepiaf@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
odfpy = "^1.4.1"
pandas = "^1.4.2"
pyarrow = "^8.0.0"
matplotlib = "^3.5.2"
plotly = "^5.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
